Fixed About page spacing issue

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -36,7 +36,7 @@ html  {
     font-size: $big-size;
     letter-spacing: .1vmin;
     // word-wrap: break-word;
-    line-height: $big-size;
+    
     @extend %font-junk;
 }
 
